--- a/Chagora/app/src/main/res/layout/activity_new_call.xml
+++ b/Chagora/app/src/main/res/layout/activity_new_call.xml
@@ -4,24 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TextActivity">
+    tools:context=".NewCallActivity">
 
     <Button
-        android:id="@+id/textBttn"
+        android:id="@+id/msgBttn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TEXT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/callBttn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CALL"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textBttn"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -31,5 +22,14 @@
         android:text="SETTINGS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textBttn" />
+        app:layout_constraintStart_toEndOf="@+id/msgBttn" />
+
+    <Button
+        android:id="@+id/callBttn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CALL"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/msgBttn"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
