--- a/Chagora/app/src/main/res/layout/activity_msg_view.xml
+++ b/Chagora/app/src/main/res/layout/activity_msg_view.xml
@@ -98,4 +98,20 @@
         app:layout_constraintBottom_toTopOf="@+id/msgBttn"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ListView
+        android:id="@+id/msgListView"
+        android:layout_width="368dp"
+        android:layout_height="327dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/inputMsgTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backBttn" />
+
 </android.support.constraint.ConstraintLayout>
