--- a/Chagora/app/src/main/res/layout/activity_msg_view.xml
+++ b/Chagora/app/src/main/res/layout/activity_msg_view.xml
@@ -101,17 +101,11 @@
     <ListView
         android:id="@+id/msgListView"
         android:layout_width="368dp"
-        android:layout_height="327dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/inputMsgTextView"
+        android:layout_height="331dp"
+        android:layout_marginTop="58dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backBttn" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
