Implemented Audio & Video Calling, global Signaling API and username

--- a/Chagora/app/src/main/res/layout/activity_call_view.xml
+++ b/Chagora/app/src/main/res/layout/activity_call_view.xml
@@ -87,4 +87,39 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/videoBttn" />
+
+    <FrameLayout
+        android:id="@+id/remoteStream"
+        android:layout_width="146dp"
+        android:layout_height="219dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/muteBttn"
+        app:layout_constraintEnd_toStartOf="@+id/firstnameTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/localStream"
+        android:layout_width="137dp"
+        android:layout_height="221dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/endCallBttn"
+        app:layout_constraintTop_toBottomOf="@+id/speakerBttn">
+
+    </FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
