--- a/Chagora/app/src/main/res/layout/activity_settings.xml
+++ b/Chagora/app/src/main/res/layout/activity_settings.xml
@@ -42,7 +42,7 @@
         app:layout_constraintStart_toEndOf="@+id/msgBttn" />
 
     <EditText
-        android:id="@+id/usernameEditText"
+        android:id="@+id/usernameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
